--- a/app/src/main/res/layout/recyclerview_task.xml
+++ b/app/src/main/res/layout/recyclerview_task.xml
@@ -10,13 +10,24 @@
         android:id="@+id/textview_task"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:gravity="center"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginEnd="16dp"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/imageButton_delete_task"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Example Task" />
+
+    <ImageButton
+        android:id="@+id/imageButton_delete_task"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#80000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_delete_white" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
